front/src/css/home.module.css
.hero {
    background-image: url('../assets/bank-tree.jpeg');
    background-position: 0 -50px;
    background-size: cover;
    background-repeat: no-repeat;
    height: 300px;
    position: relative;
}

.heroContent {
    position: relative;
    top: 2rem;
    width: 200px;
    background: white;
    padding: 2rem;
    text-align: left;
    margin: 0 auto;
}

.heroContent .subtitle {
    font-weight: bold;
    font-size: 1rem;
    margin: 0;
}

.heroContent .text {
    margin-bottom: 0;
    font-size: 0.9rem;
}

.features {
    display: flex;
    align-items: center;
}

@media (min-width: 920px) {
    .hero {
        height: 400px;
        background-position: 0% 33%;
    }

    .heroContent {
        position: absolute;
        top: 50px;
        right: 50px;
        width: 300px;
        margin: 2rem;
    }

    .heroContent .subtitle {
        font-size: 1.5rem;
    }

    .heroContent .text {
        font-size: 1.2rem;
    }
}

